footer: fix width
change width property from 100vh to 100%. Reason - 100vh don't includes scrollbar width, so additional horizontal scroll appears.

--- a/blocks/index/footer/footer.css
+++ b/blocks/index/footer/footer.css
@@ -1,6 +1,6 @@
 .footer
 {
-    width: 100vw;
+    width: 100%;
 }
 
 .footer__layout
